// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arm 1`] = `
{
  "linux": [
    {
      "arch": "armv7l",
      "file": "sep_1.1.0_armhf.snap",
    },
  ],
}
`;

exports[`auto start 1`] = `
{
  "apps": {
    "sep": {
      "autostart": "sep.desktop",
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`auto start 2`] = `
{
  "linux": [],
}
`;

exports[`base option 1`] = `
{
  "apps": {
    "testapp": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core22",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "testapp",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`base option 2`] = `
{
  "linux": [],
}
`;

exports[`buildPackages 1`] = `
{
  "apps": {
    "sep": {
      "adapter": "none",
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": {
    "app": {
      "build-packages": [
        "foo1",
        "default",
        "foo2",
      ],
      "plugin": "nil",
      "stage": [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": {
      "organize": {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": {
      "override-build": "mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/themes" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/icons" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/sounds" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`buildPackages 2`] = `
{
  "linux": [],
}
`;

exports[`classic confinement 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "cl-co-app_1.1.0_amd64.snap",
    },
  ],
}
`;

exports[`compression option 1`] = `
{
  "apps": {
    "sep": {
      "adapter": "none",
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "compression": "xz",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": {
    "app": {
      "plugin": "nil",
      "stage": [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": {
      "organize": {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": {
      "override-build": "mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/themes" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/icons" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/sounds" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`compression option 2`] = `
{
  "linux": [],
}
`;

exports[`custom after, no desktop 1`] = `
{
  "apps": {
    "sep": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`custom after, no desktop 2`] = `
{
  "linux": [],
}
`;

exports[`custom env 1`] = `
{
  "apps": {
    "sep": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "FOO": "bar",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`custom env 2`] = `
{
  "linux": [],
}
`;

exports[`default base 1`] = `
{
  "apps": {
    "testapp": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "testapp",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default base 2`] = `
{
  "linux": [],
}
`;

exports[`default compression 1`] = `
{
  "apps": {
    "sep": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default compression 2`] = `
{
  "linux": [],
}
`;

exports[`default stagePackages 1`] = `
{
  "apps": {
    "sep": {
      "adapter": "none",
      "command": "command.sh",
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": {
    "app": {
      "plugin": "nil",
      "stage": [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": {
      "organize": {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": {
      "override-build": "mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/themes" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/icons" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/sounds" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 2`] = `
{
  "linux": [],
}
`;

exports[`default stagePackages 3`] = `
{
  "apps": {
    "sep": {
      "adapter": "none",
      "command": "command.sh",
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": {
    "app": {
      "plugin": "nil",
      "stage": [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
        "custom",
      ],
    },
    "app-files": {
      "organize": {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": {
      "override-build": "mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/themes" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/icons" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/sounds" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 4`] = `
{
  "linux": [],
}
`;

exports[`default stagePackages 5`] = `
{
  "apps": {
    "sep": {
      "adapter": "none",
      "command": "command.sh",
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": {
    "app": {
      "plugin": "nil",
      "stage": [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": [
        "custom",
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": {
      "organize": {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": {
      "override-build": "mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/themes" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/icons" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/sounds" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 6`] = `
{
  "linux": [],
}
`;

exports[`default stagePackages 7`] = `
{
  "apps": {
    "sep": {
      "adapter": "none",
      "command": "command.sh",
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": {
    "app": {
      "plugin": "nil",
      "stage": [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": [
        "foo1",
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
        "foo2",
      ],
    },
    "app-files": {
      "organize": {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": {
      "override-build": "mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/themes" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/icons" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/sounds" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 8`] = `
{
  "linux": [],
}
`;

exports[`no desktop plugs 1`] = `
{
  "apps": {
    "sep": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "foo",
        "bar",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`no desktop plugs 2`] = `
{
  "linux": [],
}
`;

exports[`plugs option 1`] = `
{
  "apps": {
    "testapp": {
      "adapter": "none",
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "browser-sandbox",
        "another-simple-plug-name",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "testapp",
  "parts": {
    "app": {
      "plugin": "nil",
      "stage": [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": {
      "organize": {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": {
      "override-build": "mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/themes" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/icons" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/sounds" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "plugs": {
    "browser-sandbox": {
      "allow-sandbox": true,
      "interface": "browser-support",
    },
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Test App ßW",
  "title": "Test App ßW",
  "version": "1.1.0",
}
`;

exports[`plugs option 2`] = `
{
  "linux": [],
}
`;

exports[`plugs option 3`] = `
{
  "apps": {
    "testapp": {
      "adapter": "none",
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "browser-sandbox",
        "another-simple-plug-name",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "testapp",
  "parts": {
    "app": {
      "plugin": "nil",
      "stage": [
        "-usr/lib/python*",
        "-usr/bin/python*",
        "-var/lib/ucf",
        "-usr/include",
        "-usr/lib/X11",
        "-usr/share",
        "-usr/sbin",
        "-usr/bin",
        "-usr/lib/*/libicudata.*",
        "-usr/lib/*/libicui18n.*",
        "-usr/lib/*/libgtk-*",
        "-usr/lib/*/libgdk-*",
        "-usr/lib/*/glib-*",
        "-usr/lib/*/gtk-*",
        "-usr/lib/*/gdk-*",
        "-usr/lib/*/krb5",
        "-usr/lib/systemd",
        "-usr/lib/glib-networking",
        "-usr/lib/dconf",
        "-usr/lib/*/avahi",
        "-usr/lib/*/gio",
        "-usr/lib/*/libatk*",
        "-usr/lib/*/libatspi*",
        "-usr/lib/*/libavahi*",
        "-usr/lib/*/libcairo*",
        "-usr/lib/*/libcolordprivate*",
        "-usr/lib/*/libcolord*",
        "-usr/lib/*/libcroco*",
        "-usr/lib/*/libcups*",
        "-usr/lib/*/libdatrie*",
        "-usr/lib/*/libdconf*",
        "-usr/lib/*/libepoxy*",
        "-usr/lib/*/libexpatw*",
        "-usr/lib/*/libffi*",
        "-usr/lib/*/libfontconfig*",
        "-usr/lib/*/libfreetype*",
        "-usr/lib/*/libgdk_pixbuf*",
        "-usr/lib/*/libgdk_pixbuf_xlib*",
        "-usr/lib/*/libgio*",
        "-usr/lib/*/libglib*",
        "-usr/lib/*/libgmodule*",
        "-usr/lib/*/libgmp*",
        "-usr/lib/*/libgnutls*",
        "-usr/lib/*/libgobject*",
        "-usr/lib/*/libgraphite2*",
        "-usr/lib/*/libgssapi_krb5*",
        "-usr/lib/*/libgthread*",
        "-usr/lib/*/libharfbuzz*",
        "-usr/lib/*/libhogweed*",
        "-usr/lib/*/libicuio*",
        "-usr/lib/*/libicutest*",
        "-usr/lib/*/libicutu*",
        "-usr/lib/*/libicuuc*",
        "-usr/lib/*/libidn2*",
        "-usr/lib/*/libjbig*",
        "-usr/lib/*/libjpeg*",
        "-usr/lib/*/libjson*",
        "-usr/lib/*/libk5crypto*",
        "-usr/lib/*/libkrb5*",
        "-usr/lib/*/libkrb5support*",
        "-usr/lib/*/liblcms2*",
        "-usr/lib/*/libnettle*",
        "-usr/lib/*/libp11*",
        "-usr/lib/*/libpango*",
        "-usr/lib/*/libpangocairo*",
        "-usr/lib/*/libpangoft2*",
        "-usr/lib/*/libpixman*",
        "-usr/lib/*/libpng16*",
        "-usr/lib/*/libproxy*",
        "-usr/lib/*/librest*",
        "-usr/lib/*/librsvg*",
        "-usr/lib/*/libsecret*",
        "-usr/lib/*/libsoup*",
        "-usr/lib/*/libsqlite3*",
        "-usr/lib/*/libtasn1*",
        "-usr/lib/*/libthai*",
        "-usr/lib/*/libtiff*",
        "-usr/lib/*/libunistring*",
        "-usr/lib/*/libwayland*",
        "-usr/lib/*/libX11*",
        "-usr/lib/*/libXau*",
        "-usr/lib/*/libxcb.so*",
        "-usr/lib/*/libxcb-dri2*",
        "-usr/lib/*/libxcb-dri3*",
        "-usr/lib/*/libxcb-glx*",
        "-usr/lib/*/libxcb-present*",
        "-usr/lib/*/libxcb-render*",
        "-usr/lib/*/libxcb-shm*",
        "-usr/lib/*/libxcb-sync*",
        "-usr/lib/*/libxcb-xfixes*",
        "-usr/lib/*/libXcomposite*",
        "-usr/lib/*/libXcursor*",
        "-usr/lib/*/libXdamage*",
        "-usr/lib/*/libXdmcp*",
        "-usr/lib/*/libXext*",
        "-usr/lib/*/libXfixes*",
        "-usr/lib/*/libXinerama*",
        "-usr/lib/*/libXi*",
        "-usr/lib/*/libxkbcommon*",
        "-usr/lib/*/libxml2*",
        "-usr/lib/*/libXrandr*",
        "-usr/lib/*/libXrender*",
      ],
      "stage-packages": [
        "libnspr4",
        "libnss3",
        "libxss1",
        "libappindicator3-1",
        "libsecret-1-0",
      ],
    },
    "app-files": {
      "organize": {
        "*": "app/",
      },
      "plugin": "dump",
      "source": "app",
      "stage": [
        "-app/chrome-sandbox",
        "-LICENSES.chromium.html",
      ],
    },
    "gnome-platform-empty-dirs": {
      "override-build": "mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/themes" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/icons" mkdir -p "$SNAPCRAFT_PART_INSTALL/data-dir/sounds" mkdir $SNAPCRAFT_PART_INSTALL/gnome-platform
",
      "plugin": "nil",
    },
    "launch-scripts": {
      "plugin": "dump",
      "source": "scripts",
    },
  },
  "plugs": {
    "browser-sandbox": {
      "allow-sandbox": true,
      "interface": "browser-support",
    },
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Test App ßW",
  "title": "Test App ßW",
  "version": "1.1.0",
}
`;

exports[`plugs option 4`] = `
{
  "linux": [],
}
`;

exports[`slots option 1`] = `
{
  "apps": {
    "sep": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
      "slots": [
        "foo",
        "bar",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`slots option 2`] = `
{
  "linux": [],
}
`;

exports[`slots option 3`] = `
{
  "apps": {
    "sep": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
      "slots": [
        "mpris",
        "another-simple-slot-name",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "slots": {
    "mpris": {
      "interface": "mpris",
      "name": "chromium",
    },
  },
  "summary": "Sep",
  "title": "Sep",
  "version": "1.1.0",
}
`;

exports[`slots option 4`] = `
{
  "linux": [],
}
`;

exports[`snap 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "sep_1.1.0_amd64.snap",
    },
  ],
}
`;

exports[`use template app 1`] = `
{
  "apps": {
    "testapp": {
      "command": "command.sh",
      "environment": {
        "DISABLE_WAYLAND": "1",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "SNAP_DESKTOP_RUNTIME": "$SNAP/gnome-platform",
      },
      "plugs": [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "wayland",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "audio-playback",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": [
    "amd64",
  ],
  "base": "core20",
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "testapp",
  "plugs": {
    "gnome-3-28-1804": {
      "default-provider": "gnome-3-28-1804",
      "interface": "content",
      "target": "$SNAP/gnome-platform",
    },
    "gtk-3-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/themes",
    },
    "icon-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/icons",
    },
    "sound-themes": {
      "default-provider": "gtk-common-themes",
      "interface": "content",
      "target": "$SNAP/data-dir/sounds",
    },
  },
  "summary": "Test App ßW",
  "title": "Test App ßW",
  "version": "1.1.0",
}
`;

exports[`use template app 2`] = `
{
  "linux": [],
}
`;
